; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_lconnect.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_lconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"Invalid channel pointer\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lconnect(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.channel*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call %struct.channel* @lua_touserdata(i32* %5, i32 1)
  store %struct.channel* %6, %struct.channel** %4, align 8
  %7 = load %struct.channel*, %struct.channel** %4, align 8
  %8 = icmp eq %struct.channel* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @luaL_error(i32* %10, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.channel*, %struct.channel** %4, align 8
  %15 = call i32 @new_channel(i32* %13, %struct.channel* %14)
  store i32 1, i32* %2, align 4
  br label %16

16:                                               ; preds = %12, %9
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local %struct.channel* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32 @new_channel(i32*, %struct.channel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
